# avs4you.github.io

./: .gitignore  README.md  index.html
docs/: ContentPlugin-README.md  EffectPlugin-README.md  README.md  index.html
plugins/: config.json
plugins/effect-restoration-gaterv3/: NOTICE  gaterv3.sln  gaterv3.vcxproj  gaterv3.vcxproj.filters  module.def
plugins/effect-restoration-gaterv3/libs/: onnxruntime.lib
plugins/effect-restoration-gaterv3/src/: dllmain.cpp  export_utils.h  onnx.h
plugins/effect-spiral/: Effect.vcxproj  dllmain.cpp  module.def
plugins/effect-style-transfer/: .gitignore  Effect.sln  Effect.vcxproj  Effect.vcxproj.filters  README.md  StyleTransferRuntime.cpp  StyleTransferRuntime.h  dllmain.cpp  effect.h  module.def  packages.config  utils.h
plugins/effect-upscaler-gaterv3/src/: dllmain.cpp  onnx.cpp
plugins/effect-vhs/: Effect.vcxproj  Effect.vcxproj.filters  dllmain.cpp  module.def
plugins/heygen/: CHeygenPluginIntf.cpp  CHeygenPluginIntf.h  CMakeLists.txt  module.def
plugins/heygen/libs/x86-windows-static/debug/lib/: libwebp.lib
plugins/heygen/libs/x86-windows-static/include/VisualUI/common/: uiutils.h
plugins/heygen/libs/x86-windows-static/lib/: libwebp.lib  visualui.lib
plugins/heygen/res/: resource.rc  settings.json
plugins/heygen/res/icons/: about.emf  about_dark.emf  avatar.emf  avatar_dark.emf  chevron-down.emf  chevron-down_dark.emf  config.emf  config_dark.emf  options.emf  options_dark.emf  preview.emf  preview_dark.emf  speech.emf  speech_dark.emf  voice.emf  voice_dark.emf
plugins/heygen/res/langs/: en.isl  ru.isl
plugins/heygen/res/manifest/: Heygen.dll.manifest
plugins/heygen/res/styles/: styles.xml  themes.xml
plugins/heygen/src/: CAvatar.cpp  CAvatar.h  CCore.cpp  CCore.h  CHeygenPlugin.cpp  CHeygenPlugin.h  CUserSettings.cpp  CUserSettings.h  CVoice.cpp  CVoice.h  DSAudioPlayer.cpp  DSAudioPlayer.h  DelayLoad.h  IHeygenPlugin.cpp  IHeygenPlugin.h  ISLTranslator.cpp  ISLTranslator.h  aboutdialog.cpp  aboutdialog.h  apikeydialog.cpp  apikeydialog.h  defines.h  main.cpp  mainwindow.cpp  mainwindow.h  resource.h  ui_aboutdialog.h  ui_apikeydialog.h  ui_mainwindow.h  utils.cpp  utils.h  version.h
plugins/heygen/test/: test.cpp  test.vcxproj
plugins/sora2/: Sora2.rc  Sora2.sln  Sora2.vcxproj  Sora2.vcxproj.filters  module.def  module.manifest  translation.json
plugins/sora2/src/: dllmain.cpp  export_utils.cpp  export_utils.h  exports.cpp  exports.h  plugin.cpp  plugin.h  resource.h  sora2.cpp  sora2.h  ui.cpp  ui.h  utils.cpp  utils.h
sdk/3dParty/x86-windows-static/debug/lib/: zlib.lib
sdk/3dParty/x86-windows-static/lib/: zlib.lib
sdk/common/: ActivationContext.cpp  ActivationContext.h  CHttpClient.cpp  CHttpClient.h  CIconExtractor.cpp  CIconExtractor.h  utils.cpp  utils.h
sdk/include/: AVSConsts.h  CBase.h  CContentPluginIntf.h  CEffectPluginIntf.h  CPluginBase.h
sdk/translate/: translate.cpp  translate.h
sdk/ui/winapi/: ui.cpp  ui.h
tests/content/: test.cpp  test.sln
tests/effect/: test.cpp  test.sln  test.vcxproj
